# ghost-pool

./: .gitignore  CLAUDE.md  README.md  SUBMISSION.md  prd.md
contracts/: Cargo.toml  Odra.toml  rust-toolchain.toml
contracts/src/: events.rs  lib.rs  lp_token.rs  pool.rs  test_token.rs  types.rs
contracts/tests/: test_lp_token.rs  test_pool.rs  test_token.rs
contracts/wasm/: GhostPoolPool.wasm  LpToken.wasm  TestToken.wasm
frontend/: .gitignore  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/faucet/: route.ts
frontend/src/app/api/rpc/: route.ts
frontend/src/app/pools/: page.tsx
frontend/src/app/stake/: page.tsx
frontend/src/components/: add-liquidity.tsx  app-header.tsx  apy-display.tsx  connect-button.tsx  network-selector.tsx  pool-card.tsx  pool-position.tsx  pool-stats.tsx  price-chart.tsx  remove-liquidity.tsx  staking-stats.tsx  swap-settings.tsx  swap.tsx  token-input.tsx  withdrawal-card.tsx  withdrawals-list.tsx
frontend/src/components/ui/: progress.tsx  sonner.tsx  tooltip.tsx
frontend/src/hooks/: use-liquidity.ts  use-pool-stats.ts  use-pool.ts  use-swap.ts  use-wallet.ts  use-withdrawals.ts
frontend/src/lib/: constants.ts  pool-client.ts  token-client.ts
frontend/src/providers/: index.tsx  wallet-provider.tsx
prompts/: 11.md  12.md
