[package]
name = "ghost-pool"
version = "0.1.0"
edition = "2021"
authors = ["Ghost Pool Team"]
description = "AMM with auto-staked CSPR liquidity for Casper Network 2.0"

[dependencies]
odra = "2.4.0"
odra-modules = "2.4.0"
odra-casper-livenet-env = { version = "2.4.0", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
odra-test = "2.4.0"

[build-dependencies]
odra-build = "2.4.0"

[features]
default = []
livenet = ["odra-casper-livenet-env", "hex"]
test-mode = []  # Skip actual staking calls for testing

[[bin]]
name = "ghost_pool_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "ghost_pool_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "ghost_pool_livenet"
path = "bin/livenet.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "integration_test"
path = "bin/integration_test.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
